# gf

./: .clangd  .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  Brewfile  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  Doxyfile.cmake  LICENSE.txt  README.md  TODO.md  appveyor.yml  vcpkg.json  xmake.lua
.github/workflows/: ubuntu.yml  windows.yml  xmake.yml
cmake/: FindBox2D.cmake  FindSDL2.cmake  FindStb.cmake
cmake/sdl2/: FindSDL2.cmake
docs/: build_and_install.dox  devel.dox  differences_with_sfml.dox  documentation.dox  events_controls_actions.dox  features.dox  gamedev_101.dox  id.dox  index.dox  math.dox  messages.dox  noise.dox  opengl.dox  procedural_generation.dox  recommanded_libraries.dox  references.dox  road_to_v1.dox  shader.dox  singletons.dox  start_game.dox  use.dox  vectors_matrices_transforms.dox
docs/custom/: DoxygenLayout.xml  custom.css
docs/snippets/: CMakeLists.txt  doc_class_clock.cc  doc_class_console.cc  doc_class_cursor.cc  doc_class_drawable.cc  doc_class_entity_container.cc  doc_class_flags.cc  doc_class_font.cc  doc_class_image.cc  doc_class_rect.cc  doc_class_socket_selector.cc  doc_class_sprite.cc  doc_class_tcp_listener.cc  doc_class_tcp_socket.cc  doc_class_text.cc  doc_class_texture.cc  doc_class_time.cc  doc_class_udp_socket.cc  doc_class_ui.cc  doc_class_view_container.cc  doc_class_window.cc  doc_full_template.cc  doc_gamedev_101.cc  doc_id.cc  doc_index.cc  doc_it_moves.cc  doc_messages.cc  doc_simple_template.cc  doc_struct_blend_mode.cc  doc_struct_circ.cc  doc_struct_event.cc  doc_tutorial_id.cc  doc_tutorial_messages.cc  doc_ui.cc  doc_utils.h  index.cc  main.cc
examples/: 00_simple.cc  01_monitors.cc  02_window.cc  03_inputs.cc  04_renderer.cc  05_triangle.cc  06_views.cc  07_fullscreen.cc  08_colors.cc  10_shapes.cc  11_curves.cc  12_sprite.cc  13_animation.cc  14_spritebatch.cc  15_atlas.cc  15_bricks.xml  16_text.cc  17_buffer.cc  18_tilelayer.cc  19_ninepatch.cc  20_framerate.cc  21_particles.cc  22_midpoint.cc  23_bresenham.cc  24_easings.cc  25_activities.cc  26_map.cc  27_console.cc  28_widgets.cc  29_grid.cc  29_hexagonal.cc  30_postprocessing.cc  31_pipeline.cc  32_colorblind.cc  33_segues.cc  34_multiple_windows.cc  35_squaregrid.cc  40_collision.cc  40_noise.cc  40_ui.cc  (+10 more)
examples/assets/: CREDITS  bricks.xml  outdoor.tmx  ui.xml
games/: README.md
games/HOME/: CMakeLists.txt  README.md
games/HOME/code/: config.h.in  main.cc
games/HOME/code/local/: BackgroundMusic.cc  BackgroundMusic.h  Backpack.cc  Backpack.h  Constants.h  DayNight.cc  DayNight.h  Hero.cc  Hero.h  Map.cc  Map.h  Messages.h  Physics.cc  Physics.h  ResourceManager.cc  ResourceManager.h  Singletons.cc  Singletons.h  Spaceship.cc  Spaceship.h  SupplyManager.cc  SupplyManager.h  Timekeeper.cc  Timekeeper.h  Timer.cc  Timer.h  Victory.cc  Victory.h
games/HOME/data/HOME/map/: Map.tmx
games/bank_robbery_for_dummies/: CMakeLists.txt  README.md
games/bank_robbery_for_dummies/code/: XUnityBuild.cc  bank_robbery_for_dummies.cc  config.h.in
games/bank_robbery_for_dummies/code/local/: Car.cc  Car.h  Level.cc  Level.h  Messages.h  Story.cc  Story.h
games/bank_robbery_for_dummies/data/brfd/: FILES  OFL.txt
games/gf_2048/: CMakeLists.txt  README.md
games/gf_2048/code/: XUnityBuild.cc  config.h.in  gf_2048.cc
games/gf_2048/code/local/: Board.cc  Board.h  Grid.cc  Grid.h
games/gf_pong/: CMakeLists.txt  README.md  XUnityBuild.cc  gf_pong.cc
games/gf_pong/local/: Ball.cc  Ball.h  Ground.cc  Ground.h  Messages.h  Paddle.cc  Paddle.h  Points.cc  Points.h  Singletons.cc  Singletons.h
games/huaca/: CMakeLists.txt  README.md
games/huaca/code/: XUnityBuild.cc  config.h.in  huaca.cc
games/huaca/code/local/: Display.cc  Display.h  Hero.cc  Hero.h  Level.cc  Level.h  Messages.h  Singletons.cc  Singletons.h  Timer.cc  Timer.h
games/islands/: CMakeLists.txt  README.md
games/islands/code/: config.h.in  islands.cc
games/islands/code/local/: Compass.cc  Compass.h  DecorationManager.cc  DecorationManager.h  Gold.cc  Gold.h  Hero.cc  Hero.h  Messages.h  Sea.cc  Sea.h  Singletons.cc  Singletons.h  Steam.cc  Steam.h  TreasureManager.cc  TreasureManager.h  TurretManager.cc  TurretManager.h  WaveManager.cc  WaveManager.h
games/islands/data/islands/: FILES  sheet.xml
games/krokodile/: CMakeLists.txt  README.md
games/krokodile/code/: config.h.in  krokodile.cc
games/krokodile/code/local/: FinalScreen.cc  FinalScreen.h  Hud.cc  Hud.h  Kreature.cc  Kreature.h  KreatureContainer.cc  KreatureContainer.h  Map.cc  Map.h  Messages.h  Singletons.cc  Singletons.h
games/krokodile/data/krokodile/: FILES  atlas.xml
games/lux/: CMakeLists.txt  README.md
games/lux/code/: XUnityBuild.cc  config.h.in  lux.cc
games/lux/code/local/: Bonus.cc  Bonus.h  Bullets.cc  Bullets.h  Enemy.cc  Enemy.h  Hero.cc  Hero.h  Messages.h  Particles.cc  Particles.h  Properties.h  Scenario.cc  Scenario.h  Ship.cc  Ship.h  Shoot.cc  Shoot.h  Stars.cc  Stars.h  World.h
games/lux/data/lux/: README.md
include-priv/gfpriv/: BasicGeometry.h  GlDebug.h  GlFwd.h  SdlDebug.h  SocketPrivate.h  TextureCoords.h
include/gf/: Action.h  Activities.h  Activity.h  Alignment.h  Anchor.h  AnimatedSprite.h  Animation.h  Array2D.h  ArrayRef.h  AssetManager.h  Ball.h  BasicSprite.h  BasicText.h  BinaryFile.h  Blend.h  BlockAllocator.h  Box.h  BufferRef.h  BufferedGeometry.h  CellTypes.h  Cells.h  Circ.h  Clock.h  (+177 more)
tests/: CMakeLists.txt  main.cc  testArrayRef.cc  testBox.cc  testBufferRef.cc  testCirc.cc  testData.cc  testDice.cc  testFlags.cc  testId.cc  testMatrix.cc  testMatrix2.cc  testRange.cc  testRect.cc  testSerialization.cc  testSingleton.cc  testSocket.cc  testSpan.cc  testSpatial.cc  testStringRef.cc  testVector.cc  testVector1.cc  testVector2.cc  testVector3.cc  testVector4.cc  xmake.lua
tests/bugs/: bug23.cc  bug28.cc  bug6.cc
tools/: CMakeLists.txt  README.md
tools/gf_automata/: CMakeLists.txt  gf_automata.cc
tools/gf_dungeons/: CMakeLists.txt  gf_dungeons.cc
tools/gf_pack/: CMakeLists.txt  gf_packjson.cc  gf_packview.cc
(+13 files in other folders)
